2019-01-03  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_mosh.cpp: read_pty() is called within at least 500 msec to
	  show notification message such as "Last contact N seconds ago.".

	* README.android: The way of building mlterm for android is added.

2019-01-02  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.mosh: Added.

	* vt_pty_mosh.cpp:
	  - 'Overlay::OverlayManager *overlay' is added to vt_pty_mosh_t.
	  - The returned value of pty_mosh->display.open() is always returned
	    to the caller of read_pty().
	  - If the value of TERM environmental variable is not "xterm",
	    "rxvt", "kterm, "Eterm" or "screen", setenv("TERM", "xterm") forcibly
	    in order to enable to set window or icon title by OSC 0-2.
	  - MOSH_PREDICTION_DISPLAY environmental variable is supported.

	* ui_layout.c: When parent->next[0] or parent->next[1] is set,
	  parent->separator_x or parent->separator_y is also set.

2019-01-02  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* ui_main_config.c: "local_echo_wait" / --lew option is added.

	* vt_parser.[ch]:
	  - vt_set_local_echo_wait() is added.
	  - "local_echo_wait" is added to OSC 5379-5383.

2018-12-31  Araki Ken  <arakiken@users.sf.net>

	* vt_config_menu.c:
	  - vt_pty_set_use_loopback() => vt_pty_{ssh|mosh}_set_use_loopback()
	  - is_mosh is added to vt_config_menu_t.

	* vt_pty.h: If USE_MOSH is defined, ssh2 specific functions are concealed

	* vt_pty_ssh.c: vt_pty_set_use_loopback() => vt_pty_ssh_set_use_loopback()

	* vt_pty_mosh.c: vt_pty_mosh_set_use_loopback() is added.

	* libptymosh/vt_pty_mosh.cpp:
	  - USE_LIBSSH2 and USE_MOSH are defined explicitly.
	  - vt_pty_mosh_set_use_loopback() is added.
	  - Dead lock is fixed in watch_ptys().
	  - If pty_mosh->initialized is false, pty_mosh->display.open() is
	    called in read_pty().
	  - vt_pty_t::slave is -2 instead of -1 to distinguish from ssh.
	  - Calculation of vt_pty_t::child_pid is fixed.
